# likert_correlation

./: .gitignore  ELI5.md  README.md  likert.spec  pyproject.toml
likert_correlation/: __init__.py  analyzer.py  main.py  web.py
likert_correlation/static/js/: main.js
likert_correlation/templates/: index.html
